minor: remove pom stuff for java.security.manager after change to 25+ (#19885)